# vermillion-puck

./: .gitignore  POSTER_FINAL_PROJECT.pptx  README.md
controller/: CMakeLists.txt  app.overlay  prj.conf
controller/host/: atc_gui.py  influx_writer.py  mqtt_publisher.py  requirements.txt  run_skywatch.sh
controller/host/scripts/: SETUP.md  test_pipeline.py
controller/src/: shell.c
controller/src/aircraft_db/ref/: description.md
controller/src/aircraft_db/src/: aircraft_db.c  aircraft_db.h
controller/src/ble/ref/: description.md
controller/src/ble/src/: ble_central.c  ble_central.h
controller/src/bridge/ref/: description.md
controller/src/bridge/src/: bridge.c  bridge.h
controller/src/collision/ref/: description.md
controller/src/collision/src/: collision.c  collision.h
controller/src/common/ref/: description.md
controller/src/common/src/: aircraft_t.h  ble_packet.h
controller/src/db_publisher/ref/: description.md
controller/src/db_publisher/src/: db_publisher.c  db_publisher.h
controller/src/imm/src/: imm.c  imm.h
controller/src/json/ref/: description.md
controller/src/json/src/: json_parser.c  json_parser.h
controller/src/kalman/ref/: description.md
controller/src/kalman/src/: kalman.c  kalman.h
controller/src/main/ref/: description.md
controller/src/main/src/: main.c
controller/src/missile/ref/: description.md
controller/src/missile/src/: missile.c  missile.h
controller/src/shell/ref/: description.md
controller/src/shell/src/: shell.c
controller/src/usb_device/ref/: description.md
controller/src/usb_device/src/: usb_device.c
controller/src/usb_handler/ref/: description.md
controller/src/usb_handler/src/: usb_handler.c  usb_handler.h
controller/src/usb_serial/ref/: description.md
controller/src/usb_serial/src/: usb_serial.c  usb_serial.h
resources/: protocol_reference.md
sim/mobile/: CMakeLists.txt  app.overlay  prj.conf
sim/mobile/.cache/clangd/index/: codein.c.2A02BAF343CD8649.idx  codein.c.9D6EE9606161050A.idx
sim/mobile/src/common/src/: ble_packet.h
sim/mobile/src/main/src/: codein.c
sim/mobile/src/usb_device/src/: usb_device.c
(+11 files in other folders)
